config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -72,5 +72,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://anapaulafreire-3963c.netlify.app"
 }
