--- a/content/data/config.json
+++ b/content/data/config.json
@@ -16,7 +16,7 @@
                 "label": "Portfolio",
                 "url": "/portfolio/",
                 "style": "link"
-            }
+            },
             // {
             //     "label": "Blog",
             //     "url": "/blog/",
@@ -32,11 +32,11 @@
             //     "url": "/about/",
             //     "style": "link"
             // },
-            // {
-            //     "label": "Contact",
-            //     "url": "/contact/",
-            //     "style": "link"
-            // }
+            {
+                "label": "Contact",
+                "url": "/contact/",
+                "style": "link"
+            }
         ]
     },
     "footer": {
