--- a/content/data/config.json
+++ b/content/data/config.json
@@ -17,21 +17,21 @@
                 "url": "/portfolio/",
                 "style": "link"
             },
-            // {
-            //     "label": "Blog",
-            //     "url": "/blog/",
-            //     "style": "link"
-            // },
-            // {
-            //     "label": "Style Guide",
-            //     "url": "/style-guide/",
-            //     "style": "link"
-            // },
-            // {
-            //     "label": "About",
-            //     "url": "/about/",
-            //     "style": "link"
-            // },
+            {
+                "label": "Blog",
+                "url": "/blog/",
+                "style": "link"
+            },
+            {
+                "label": "Style Guide",
+                "url": "/style-guide/",
+                "style": "link"
+            },
+            {
+                "label": "About",
+                "url": "/about/",
+                "style": "link"
+            },
             {
                 "label": "Contact",
                 "url": "/contact/",
