config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -10,7 +10,7 @@
             {
                 "label": "Inicio",
                 "url": "/",
-                "style": "link",
+                "style": "link"
             },
             {
                 "label": "Portfolio",
